--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,28 @@
 services:
-
-  php:
+  phpApache:
     image: php:apache
-    container_name: phpApache
     ports:
       - "8080:80"
     volumes:
       - .:/var/www/html
 
-  mysql:
+  MySQL:
     image: mysql
-    container_name: MySQL
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ambiente_padrao_mysql_data:/var/lib/mysql
     ports:
       - "3306:3306"
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
 
-  phpmyadmin:
+  phpMyAdmin:
     image: phpmyadmin
     ports:
       - "8081:80"
     environment:
-      PMA_HOST: mysql
+      PMA_HOST: MySQL
       MYSQL_ROOT_PASSWORD: ''
 
 volumes:
-  mysql_data:
+  ambiente_padrao_mysql_data:
+    external: true
