--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   phpApache:
     image: php:apache
     ports:
@@ -8,21 +9,19 @@ services:
 
   MySQL:
     image: mysql
+    restart: always
     volumes:
-      - ambiente_padrao_mysql_data:/var/lib/mysql
+      - C:\dev\ambiente_padrao\my_dados:/var/lib/mysql
     ports:
       - "3306:3306"
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+      MYSQL_DATABASE: base_de_dados
 
   phpMyAdmin:
     image: phpmyadmin
     ports:
       - "8081:80"
     environment:
-      PMA_HOST: MySQL
+      PMA_HOST: mysql
       MYSQL_ROOT_PASSWORD: ''
-
-volumes:
-  ambiente_padrao_mysql_data:
-    external: true
